--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,14 @@ authors = [{ name = "Carlos Andreo", email = "c.andreo@uma.es" }]
 
 [dependency-groups]
 prod = [
-  "fastapi[standard]==0.117.1",
+  "fastapi[standard]==0.118.0",
   "motor==3.7.1",
-  "passlib[bcrypt]==1.7.4",
+  "pwdlib[argon2]==0.2.1",
   "pydantic-settings==2.11.0",
   "pyjwt==2.10.1",
 ]
 lint = [
-  "ruff==0.13.1",
+  "ruff==0.13.2",
 ]
 
 [tool.uv]
