fix: path to ruff file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
         "editor.defaultFormatter": "charliermarsh.ruff"
     },
     "ruff.configurationPreference": "filesystemFirst",
-    "ruff.configuration": "${workspaceFolder}/backend/ruff.toml",
+    "ruff.configuration": "${workspaceFolder}/ruff.toml",
 }
