chore: udpate dependencies

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 # ─────────────────────────────
 # FastAPI CONFIGURATION
 # ─────────────────────────────
-SECRET_KEY="your-secret-key"
+SECRET_KEY="your-secret-key" # openssl rand -hex 32
 JWT_ALGORITHM="HS256"
 ACCESS_TOKEN_EXPIRE_MINUTES=10080 # 60 * 24 * 7 = 10080 minutes = 7 days
 
@@ -18,10 +18,10 @@ MONGO_INITDB_DATABASE="test-database"
 # ─────────────────────────────
 # MONGO-EXPRESS CONFIGURATION
 # ─────────────────────────────
-# Web password
-ME_CONFIG_BASICAUTH_PASSWORD="test"
 # Web username
 ME_CONFIG_BASICAUTH_USERNAME="test"
+# Web password
+ME_CONFIG_BASICAUTH_PASSWORD="test"
 ME_CONFIG_MONGODB_ENABLE_ADMIN="false"
 ME_CONFIG_MONGODB_PORT=27017
 ME_CONFIG_MONGODB_SERVER="${MONGO_INITDB_DATABASE}"
