add: new variables for logs and refresh token

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,6 +54,11 @@ services:
       SECRET_KEY: ${SECRET_KEY}
       JWT_ALGORITHM: ${JWT_ALGORITHM}
       ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES}
+      REFRESH_TOKEN_EXPIRE_DAYS: ${REFRESH_TOKEN_EXPIRE_DAYS}
+      BACKEND_HOST: ${BACKEND_HOST}
+      BACKEND_PORT: ${BACKEND_PORT}
+      LOG_LEVEL: ${LOG_LEVEL}
+      LOG_JSON_FORMAT: ${LOG_JSON_FORMAT}
       MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
       ME_CONFIG_MONGODB_URL: ${ME_CONFIG_MONGODB_URL}
     depends_on:
