--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,11 @@
 SECRET_KEY="your-secret-key" # openssl rand -hex 32
 JWT_ALGORITHM="HS256"
 ACCESS_TOKEN_EXPIRE_MINUTES=10080 # 60 * 24 * 7 = 10080 minutes = 7 days
+REFRESH_TOKEN_EXPIRE_DAYS=30
+BACKEND_HOST="0.0.0.0"
+BACKEND_PORT=8000
+LOG_LEVEL="INFO"
+LOG_JSON_FORMAT="true"
 
 # ─────────────────────────────
 # MONGODB CONFIGURATION
