--- a/docker/fastapi/Dockerfile
+++ b/docker/fastapi/Dockerfile
@@ -1,18 +1,17 @@
-FROM python:3.14.0-slim
+FROM python:3.14.0-alpine
 
+ENV PYTHONUNBUFFERED=1
 ENV UV_HOME="/root/.uv"
 ENV PATH="/root/.uv:${PATH}"
 
-EXPOSE 8000
-
-RUN apt-get update && apt-get install -y curl
+RUN apk add --no-cache curl gcc musl-dev libffi-dev
 
 WORKDIR /fastapi-mongodb
 
-RUN curl -LsSf https://astral.sh/uv/install.sh | env UV_INSTALL_DIR="${UV_HOME}" sh
+RUN curl -LsSf https://astral.sh/uv/install.sh | env UV_INSTALL_DIR=${UV_HOME} sh
 
 COPY . .
 
-RUN uv sync
+RUN uv sync --frozen --group dev
 
-CMD ["uv", "run", "fastapi", "dev", "app/main.py", "--host", "0.0.0.0"]
+CMD uv run fastapi dev app/main.py --host ${BACKEND_HOST} --port ${BACKEND_PORT}
