--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,19 @@ prod = [
 lint = [
   "ruff==0.14.8",
 ]
+type = [
+  "pyright==1.1.407",
+]
+test = [
+  "faker==38.2.0",
+  "httpx==0.28.1",
+  "pytest==9.0.2",
+  "pytest-cov==7.0.0",
+]
+dev = [
+  {include-group = "type"},
+  {include-group = "test"}
+]
 
 [tool.uv]
 default-groups = ["prod"]
