--- a/pytest.toml
+++ b/pytest.toml
@@ -8,6 +8,7 @@ addopts = [
     "-q",
     "--cov=app",
     "--cov-report=term-missing",
+    "--cov-report=xml",
 ]
 filterwarnings = [
     "ignore::UserWarning:tzlocal",
