--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -53,6 +53,8 @@ jobs:
       env:
         ME_CONFIG_MONGODB_URL: mongodb://${{ secrets.MONGO_INITDB_ROOT_USERNAME }}:${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}@localhost:27017/${{ secrets.MONGO_INITDB_DATABASE }}?authSource=admin
         MONGO_INITDB_DATABASE: ${{ secrets.MONGO_INITDB_DATABASE }}
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        JWT_ALGORITHM: ${{ secrets.JWT_ALGORITHM }}
       run: uv run pytest
 
     - name: Extract coverage percentage
