--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
 
   mongodb:
-    image: mongo:8.2.3-noble
+    image: mongo:8.2.4-noble
     container_name: ${MONGO_INITDB_DATABASE}
     restart: always
     ports:
@@ -66,7 +66,9 @@ services:
 
 volumes:
   mongo-data:
+    name: fastapi-mongo-data
   mongo-config:
+    name: fastapi-mongo-config
 
 networks:
   fastapi-network:
